cabal-version:      3.0
name:               TowerDefence
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Lars Magnus Nordeide
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable TowerDefence
    import:           warnings
    main-is:          Main.hs
    other-modules:
                      Game.Util
                      Game.Type
                      Game.Graphics
                      Game.Game
                      Game.Entity
                      Game.Components.Enemy
                      Game.Components.Path
                      Game.Components.Tower
                      Game.Components.GameState
                      Game.Systems.EnemyUpdate
                      Game.Systems.TowerAttack
                      Game.Systems.TowerTargeting
    -- other-extensions:
    build-depends:
        base,
        containers,
        gloss,
        linear,
        lens
    hs-source-dirs:   app
    default-language: Haskell2010
